# of-tools

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  docker-bake.hcl  main.py  post-user.sh  pyproject.toml
.github/: dependabot.yml
docs/: CONTRIBUTING.md  README.md
of-scraper-post/: Dockerfile  config.yml  docker-bake.hcl  main.py  post-loop.sh  pyproject.toml  script.sh
pyofscraperstash/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  __main__.py  pyproject.toml
pyofscraperstash/.github/: dependabot.yml
pyofscraperstash/.github/workflows/: release.yml
pyofscraperstash/pyofscraperstash/: __init__.py  __main__.py
